zeit.content.article changes
============================

3.25.0 (unreleased)
-------------------

- ZON-4006: Move mobile fields to their own form

- BUG-133: Hide the whole "breaking news" info, not just the retract button
  when the banner doesn't match anymore


3.24.0 (2017-07-05)
-------------------

- ZON-4054: Add marker interfaces for error pages


3.23.4 (2017-06-29)
-------------------

- BUG-743: Ignore empty imagegroups in IElementReferences


3.23.3 (2017-06-26)
-------------------

- MAINT: Remove obsolete banner control files (wrapper, ios-legacy)


3.23.2 (2017-06-22)
-------------------

- ZON-3950: Leave other workflow checkboxes alone when checking `urgent`


3.23.1 (2017-06-12)
-------------------

- ZON-3485: Reset local values when the referenced portraitbox is changed


3.23.0 (2017-06-09)
-------------------

- ZON-3810: Add IElementReferences Adapter


3.22.1 (2017-06-01)
-------------------

- Fix broken release


3.22.0 (2017-06-01)
-------------------

- ZON-3920: Disable FBIA if content is not free

- BUG-669: Set up portraitbox module properly


3.21.13 (2017-05-05)
--------------------

- FIX: unpublished volume reference does not trigger warning in AAD


3.21.12 (2017-03-15)
--------------------

- ZON-3792: Put ``access`` widget behind feature toggle ``zeit.cms.rr-access``


3.21.11 (2017-03-06)
--------------------

- BUG-669: Serialize empty local text in portraitbox module correctly


3.21.10 (2017-02-17)
--------------------

- Build release 3.21.9 again because it's broken.


3.21.9 (2017-02-16)
-------------------

- ZON-3485: Allow portraitbox to lack a reference and override fields locally.


3.21.8 (2017-01-31)
-------------------

- ZON-3430: Normalize quotation marks in teaser


3.21.7 (2017-01-31)
-------------------

- MAINT: Update to zeit.push API changes after parse.com shutdown


3.21.6 (2017-01-26)
-------------------

- ZON-3629: Add overscrolling option


3.21.5 (2017-01-18)
-------------------
