@@ -6,6 +6,8 @@ zeit.content.article changes
 
 - ZON-4006: Move mobile fields to their own form
 
+- BUG-500: Update to new dependency API
+
 - BUG-133: Hide the whole "breaking news" info, not just the retract button
   when the banner doesn't match anymore
 
